Fixing the wrap on the pokemon evolution text in the modal

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -85,3 +85,7 @@
  .setting-description {
     white-space: normal;
  }
+
+ .pokemon-evolution {
+    white-space: normal;
+ }
